--- a/index.html
+++ b/index.html
@@ -47,9 +47,16 @@
             </div>
             <i class="fas fa-trash-alt trashIcon icon"></i>
           </li>
+          <li class="card">
+            <div>
+              <i class="far fa-check-square icon"></i>
+              <span class="task">Aprender más sobre DOM</span>
+            </div>
+            <i class="fas fa-trash-alt trashIcon icon"></i>
+          </li>
         </ul>
       </div>
     </main>
-    
+
   </body>
 </html>
