--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li class="card">
             <div>
               <i class="far fa-check-square icon"></i>
-              <span class="task">Hacer curso de DOM</span>
+              <span class="task">Hacer curso de DOM javascript</span>
             </div>
             <i class="fas fa-trash-alt trashIcon icon"></i>
           </li>
