--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
               placeholder="Nombre de la tarea"
               class="inputForm"
               autocomplete="off"
+              data-form-input
             />
-            <button type="submit" class="btnCreate">
+            <button type="submit" class="btnCreate" data-form-btn>
               Agregar <i class="fas fa-plus-circle"></i>
             </button>
           </form>
@@ -58,5 +59,6 @@
       </div>
     </main>
 
+      <script src="script.js"></script>
   </body>
 </html>
