--- a/index.html
+++ b/index.html
@@ -40,21 +40,8 @@
           </form>
         </div>
 
-        <ul class="cardsList">
-          <li class="card">
-            <div>
-              <i class="far fa-check-square icon"></i>
-              <span class="task">Hacer curso de DOM javascript</span>
-            </div>
-            <i class="fas fa-trash-alt trashIcon icon"></i>
-          </li>
-          <li class="card">
-            <div>
-              <i class="far fa-check-square icon"></i>
-              <span class="task">Aprender más sobre DOM</span>
-            </div>
-            <i class="fas fa-trash-alt trashIcon icon"></i>
-          </li>
+        <ul class="cardsList" data-list>
+         
         </ul>
       </div>
     </main>
