--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
   <body>
 
     <main>
-      <div class="mainCard">
-        <div class="title"><img src="./assets/rocket.svg" /></div>
+      <div class="mainCard"><div class="title">
+                           <img src="./assets/rocket.svg" />
+                  </div>
+
+                  <div class="title__plan">
+                    <h1>ESTÉ ES EL PLAN...</h1>
+                  </div>
+
         <div>
           <form action="">
             <input
